platform/service-mesh/istio/security/authorization/apigateway-service/allow-istio-ingress.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-istio-ingress
  namespace: apigateway-service
spec:
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-system/sa/istio-ingressgateway
