platform/service-mesh/istio/security/authorization/apigateway-service/deny-all.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: apigateway-service
spec: {}
